mini-elp/crates/elp/src/resources/test/parse_error/eqwalize_elpt2_reference_nonexistent.pretty
Module elpt2_reference_nonexistent not found

[cause truncated in tests to avoid absolute paths]